--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "main",
-  "homepage": "http://www.sheshehanglimbu.com.np/",
+  "homepage": "http://M4dEggs.github.io/Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
